@@ -505,6 +505,7 @@ Other Changes
   - SOLR-11105: Randomize PointFields in "cloud-minimal-jmx" and "cloud-minimal-inplace-updates" test configsets (Steve Rowe)
   - SOLR-11109: Randomize PointFields in "cloud-subdirs" and "configset-2" test configsets (Steve Rowe)
   - SOLR-11110: Randomize PointFields in "cloud-managed" and "cloud-managed-upgrade" test configsets (Steve Rowe)
+  - SOLR-11102: Randomize PointFields in schema-rest.xml and all affected tests (hossman)
 
 * SOLR-6807: Changed requestDispatcher's handleSelect to default to false, thus ignoring "qt".
   Simplified configs to not refer to handleSelect or "qt".  Switch all tests that assumed true to assume false
